chore(jdk11): JDK 11 compatibility (#182)
- explicit dependencies for modules that got jigsawed
- migrated from deprecated/removed jdk classes
- resolved compiler issues with JDK9+
- nightly java compatibility job

relates to #OPT-1821